--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 
 <html lang="zh-cn">
 
-<head>
+<head>https://770818354.github.io/yangzhu/
 
 <meta charset="UTF-8" />
 
@@ -12,7 +12,7 @@
 
 <body>
 
-<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" homePageUrl="https://www.robotkang.cc" homePageName="回到主页"></script>
+<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" homePageUrl="https://770818354.github.io/yangzhu" homePageName="回到主页"></script>
 
 </body>  
 
