--- a/college/index.html
+++ b/college/index.html
@@ -15,7 +15,7 @@
         <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
 
 
-	<title>亢志军-Robotkang-大学|四年</title>
+	<title>豆晨楠-我很会养猪丶-大学|四年</title>
 
 	<link rel="icon" type="image/png" href="/images/favicon.png" />
 	<link href="/images/favicon.png" rel="shortcut icon" type="image/png">
