--- a/donation/index.html
+++ b/donation/index.html
@@ -106,9 +106,9 @@
 -->
 
 <div class="donate-note">
-<p>* 打赏时请尽量留下备注，好让我知道你是谁~如果当时忘记加备注，可在 <a href="http://robotkang.cc/liuyan/" target="_blank">本博客留言板</a> 说明</p>
+<p>* 打赏时请尽量留下备注，好让我知道你是谁~如果当时忘记加备注，可在 <a href="http://yangzhu.fun/liuyan/" target="_blank">本博客留言板</a> 说明</p>
 <p>* 此记录不定期手动更新，可能有延迟。
-如果您曾进行过赞助，但未出现在列表里，请发送邮件至 robotkang@foxmail.com</p>
+如果您曾进行过赞助，但未出现在列表里，请发送邮件至 770818354@qq.com</p>
 
 </div>
 
@@ -118,7 +118,7 @@
 
 <footer class="footer text-center">
     『感恩的心 · 感谢有你』
-    <p class="copyright">Copyright © 2019-2022 robotkang.cc</p>
+    <p class="copyright">Copyright © 2019-2022 yangzhu.fun</p>
 	<!-- Copyright © 2017  mkblog.cn , thank you very much -->
 </footer>
 
