--- a/time machine/index.html
+++ b/time machine/index.html
@@ -1293,7 +1293,7 @@
 	<div style="text-align:center;margin:30px 0; font:normal 14px/24px 'MicroSoft YaHei';">
 		<strong>
 			<p>Copyright &copy; 2017-2019.Robotkang. All rights reserved.</p>
-			<p>主页：<a href="https://yangzhu.fun/" target="_blank" color="#FF6633" style="text-decoration:none">www.robotkang.cc</a></p>
+			<p>主页：<a href="https://yangzhu.fun/" target="_blank" color="#FF6633" style="text-decoration:none">www.yangzhu.fun</a></p>
 		</strong>
 
 	</div>
