--- a/Mr.Kang_Developer/index.html
+++ b/Mr.Kang_Developer/index.html
@@ -15,6 +15,18 @@
 
 <link href="css/style-v2.7.css?7" media="not print" rel="stylesheet" type="text/css" />
 <link href="css/style-v2.7-print.css?7" media="print" rel="stylesheet" type="text/css" />
+
+<!-- 百度统计 -->
+<script>
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "https://hm.baidu.com/hm.js?5369fa11ef087cef4867dc5c80ef5ff8";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
+</script>
+
 </head>
 
 <body>
