--- a/dsimg/APP/index.html
+++ b/dsimg/APP/index.html
@@ -10,6 +10,16 @@
 	<meta name="format-detection" content="telephone=no">
 	<link rel="shortcut icon" href="favicon.png">
 	<link rel="stylesheet" href="css/style.css">
+		<!-- 百度统计 -->
+		<script>
+			var _hmt = _hmt || [];
+			(function() {
+			var hm = document.createElement("script");
+			hm.src = "https://hm.baidu.com/hm.js?5369fa11ef087cef4867dc5c80ef5ff8";
+			var s = document.getElementsByTagName("script")[0]; 
+			s.parentNode.insertBefore(hm, s);
+			})();
+		</script>
 	<script>!
 		function(n, e) {
 			var w = 0,
