--- a/photos/index.html
+++ b/photos/index.html
@@ -33,8 +33,18 @@
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="1390305137@qq.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="770818354@qq.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
+						<!-- 百度统计 -->
+						<script>
+							var _hmt = _hmt || [];
+							(function() {
+							var hm = document.createElement("script");
+							hm.src = "https://hm.baidu.com/hm.js?5369fa11ef087cef4867dc5c80ef5ff8";
+							var s = document.getElementsByTagName("script")[0]; 
+							s.parentNode.insertBefore(hm, s);
+							})();
+						</script>
 					</header>
 
 				<!-- Thumbnail   大图：1200*750  缩略图：360*225-->
@@ -110,7 +120,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a rel="nofollow" href="http://html5up.net">亢志军</a></li>
+							<li>&copy; Untitled.</li><li>Design: <a rel="nofollow" href="http://html5up.net">我很会养猪丶</a></li>
 						</ul>
 					</footer>
 
