--- a/time machine/index.html
+++ b/time machine/index.html
@@ -4,12 +4,24 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
-	<title>时光-Robotkang </title>
+	<title>时光-我很会养猪丶 </title>
 
 	<link rel="stylesheet" href="css/flowChart.css" />
 <link rel="apple-touch-icon" sizes="192x192" href="/images/favicon.png" />
 <link rel="icon" type="image/png" href="/images/favicon.png" />
 <link href="/images/favicon.png" rel="shortcut icon" type="image/png"/>
+
+<!-- 百度统计 -->
+<script>
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "https://hm.baidu.com/hm.js?5369fa11ef087cef4867dc5c80ef5ff8";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
+</script>
+
 
 </head>
 
