取消百度统计

--- a/gamebird/index.html
+++ b/gamebird/index.html
@@ -60,28 +60,18 @@
 			window.shareData.tTitle = document.title;
 		}
 		</script>
-		<!-- 百度统计 -->
-		<script>
-			var _hmt = _hmt || [];
-			(function() {
-			var hm = document.createElement("script");
-			hm.src = "https://hm.baidu.com/hm.js?5369fa11ef087cef4867dc5c80ef5ff8";
-			var s = document.getElementsByTagName("script")[0]; 
-			s.parentNode.insertBefore(hm, s);
-			})();
-		</script>
 		</head>
 	<body>
 		<div style="text-align:center;">
 			<canvas id="linkScreen">
-				很遗憾，您的浏览器不支持HTML5，请使用支持HTML5的浏览器。
+				很遗憾,您的浏览器不支持HTML5,请使用支持HTML5的浏览器。
 			</canvas>
 		</div>
         <div id="mask_container" align="center" style="width: 100%; height: 100%; position: absolute; left: 0px; top: 0px; display: none; z-index: 100000; background-color: rgb(255, 255, 255);">
                 <img id="p2l" src="img/p2l.jpg" style="position: absolute;left: 50%;top: 50%;-webkit-transform:translateX(-50%) translateY(-50%);transform:translateX(-50%) translateY(-50%)" >
         </div>
 		<div id=share style="display:none">
-		<img  width=100% src="2000.png"  style="position:absolute;top:0;left:0;display:" onclick="document.getElementById('share').style.display='none';">
+		<img  width=100% src="2000.png"  style="position:absolute;top:0;left:0;display:none" onclick="document.getElementById('share').style.display='none';">
 		</div>
 		
 <div style="display:none;">
