--- a/college/index.html
+++ b/college/index.html
@@ -143,8 +143,8 @@
 							<li>
 								<a href="javascript:void(0)" onclick="play()" id="playbtn" class="btn_sound" title="单击关闭音乐"></a>
 							</li>
-							<li><a href="https://robotkang.cc" target="_blank">主页</a></li>
-							<li><a href="https://robotkang.cc/liuyan" target="_blank">留言</a></li>
+							<li><a href="https://yangzhu.fun" target="_blank">主页</a></li>
+							<li><a href="https://yangzhu.fun/liuyan" target="_blank">留言</a></li>
 						</ul>
 						<span class="ic_line" id="h_line"></span>
 					</div>
@@ -185,7 +185,7 @@
 										</div>
 										<div class="timeyear">YEAR</div>
 									</div>
-									<a href="http://robotkang.cc" class="clock"></a>
+									<a href="http://yangzhu.fun" class="clock"></a>
 								</div>
 							</div>
 
@@ -406,7 +406,7 @@
 
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/1.jpg" alt="学习LOS" height=100 width=100></div>
 									<div class="info">
@@ -422,7 +422,7 @@
 
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/2.jpg" alt="学习" height=200 width=220></div>
 									<div class="info">
@@ -438,7 +438,7 @@
 
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/3.png" alt="学习" height=200 width=200></div>
 									<div class="info">
@@ -454,7 +454,7 @@
 
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/4.jpg" alt="学习" height=200 width=200></div>
 									<div class="info">
@@ -470,7 +470,7 @@
 
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/5.jpg" alt="学习" height=200 width=200></div>
 									<div class="info">
@@ -486,7 +486,7 @@
 
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/6.jpg" alt="学习" height=200 width=200></div>
 									<div class="info">
@@ -502,7 +502,7 @@
 
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/7.jpg" alt="学习" height=200 width=200></div>
 									<div class="info">
@@ -518,7 +518,7 @@
 
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/8.jpg" alt="学习" height=200 width=200></div>
 									<div class="info">
@@ -534,7 +534,7 @@
 
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/9.jpg" alt="学习" height=200 width=200></div>
 									<div class="info">
@@ -549,7 +549,7 @@
 						</div>
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/10.jpg" alt="学习" height=200 width=200></div>
 									<div class="info">
@@ -565,7 +565,7 @@
 
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/11.jpg" alt="学习" height=200 width=200></div>
 									<div class="info">
@@ -581,7 +581,7 @@
 
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/12.jpg" alt="学习" height=200 width=200></div>
 									<div class="info">
@@ -596,7 +596,7 @@
 						</div>
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/13.jpg" alt="学习" height=200 width=200></div>
 									<div class="info">
@@ -612,7 +612,7 @@
 
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/14.jpg" alt="学习" height=200 width=200></div>
 									<div class="info">
@@ -628,7 +628,7 @@
 
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/15.jpg" alt="学习" height=200 width=200></div>
 									<div class="info">
@@ -644,7 +644,7 @@
 
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/16.jpg" alt="学习" height=200 width=200></div>
 									<div class="info">
@@ -660,7 +660,7 @@
 
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/17.jpg" alt="学习" height=200 width=200></div>
 									<div class="info">
@@ -675,7 +675,7 @@
 						</div>
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/18.jpg" alt="学习" height=200 width=200></div>
 									<div class="info">
@@ -691,7 +691,7 @@
 
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/19.jpg" alt="学习" height=200 width=200></div>
 									<div class="info">
@@ -707,7 +707,7 @@
 
 						<div class="case-item">
 							<div class="ih-item circle effect1">
-								<a href="http://robotkang.cc/liuyan/">
+								<a href="http://yangzhu.fun/liuyan/">
 									<div class="spinner"></div>
 									<div class="img"><img src="images/20.jpg" alt="学习" height=200 width=200></div>
 									<div class="info">
@@ -926,7 +926,7 @@
 </head>
 <body>
     <div class="comment"></div>
-        <script>
+        <!-- <script>
         new Valine({
             // AV 对象来自上面引入av-min.js(老司机们不要开车➳♡゛扎心了老铁)
             av: AV, 
@@ -940,7 +940,24 @@
             pageSize:10,
             serverURLs: 'https://jdvyyfmr.api.lncldglobal.com',
         });
-    </script>
+    </script> -->
+
+	<!-- my -->
+    <script>
+		new Valine({
+			// AV 对象来自上面引入av-min.js(老司机们不要开车➳♡゛扎心了老铁)
+			av: AV, 
+			el: '.comment', // 
+			app_id: 'yukBIwNt2MtAq9NHXagpfMOX-gzGzoHsz', // 这里填写上面得到的APP ID
+			app_key: 'MNdZfu6nIohskofglycTeI0z', // 这里填写上面得到的APP KEY
+			placeholder: 'ヾﾉ≧∀≦)o来啊，快活啊哈!', // [v1.0.7 new]留言框占位提示文字
+			avatar:'wavatar',
+			path:window.location.pathname,
+			guest_info:['nick','mail','link'] ,
+			pageSize:10,
+			serverURLs: 'https://yukbiwnt.lc-cn-n1-shared.com',
+		});
+	</script>
 </body>
 </html>				
 
